--- a/TelegramBot-TestingFAQBot/TelegramBot-TestingFAQBot.csproj
+++ b/TelegramBot-TestingFAQBot/TelegramBot-TestingFAQBot.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>TelegramBot_TestingFAQBot</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Telegram.Bot" Version="16.0.2" />
+  </ItemGroup>
+
 </Project>
